Fixed heights bug
A bug appeared early on that made the outer container too small for the inner containers.  The reason for this was that that anchor in the offline streamer wasn't adapting its height to the logo inside it.  Thgis was fixed by giving the logos a fixed height.

--- a/twitchstyle.css
+++ b/twitchstyle.css
@@ -359,6 +359,7 @@ input:hover, input:focus {
 	justify-content : flex-start;
 	align-content : flex-start;
  	position : absolute;
+ 	left : 0;
  	width : 100%;
  	transition : left 300ms ease-in-out;
  	padding : 0 0 1vh 0;
@@ -425,8 +426,8 @@ a:hover, a:focus {
 .logo {
 	display : block;
 	margin : 1vh auto;
-	width : 30%;
-	max-width: 200px;
+	height : 110px;
+	width: 110px;
 }
 
 
